Fix some spacing

--- a/css/main.css
+++ b/css/main.css
@@ -76,7 +76,7 @@ img {
 
   img {
     display: inline-block;
-    width: 24.63%;
+    width: 24.635%;
   }
 
   body {
